Updated current teams list

--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@
               Teams
             </h1>  
           </div>
-          <div class="col-md-6 mt-4">
+          <div class="col-md-8 mt-4">
             <p class="text-center ">
               Which teams are already using the Touch Rugby Network?
             </p>  
           </div>
         </div>
-        <div class="row text-center">
+        <div class="row justify-content-md-center text-center">
           <div class="col-md-4 ">
             <div class="card border-secondary mb-3" >
               <a href="https://stormers.touchrugby.club/">
@@ -350,7 +350,7 @@
               </div></a>
             </div> 
           </div>          
-          <div class="col-md-4 ">
+          <!-- <div class="col-md-4 ">
             <div class="card border-secondary mb-3" >
               <div class="card-body text-secondary">
                 <h3 class="card-title">Stafford Bull Terriers</h3>
@@ -358,8 +358,8 @@
                 </p>
               </div>
             </div> 
-          </div>          
-          <div class="col-md-4 ">
+          </div>           -->
+          <!-- <div class="col-md-4 ">
             <div class="card border-secondary mb-3" >
               <div class="card-body text-secondary">
                 <h3 class="card-title">Revolution touch</h3>
@@ -367,7 +367,7 @@
                 </p>
               </div>
             </div> 
-          </div>     
+          </div>      -->
         </div>
       </div>
     </div>
