Removed social links from nenu

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
             <li class="nav-item">
               <a class="nav-link" href="#teams">Teams</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                <a class="nav-link" href="https://www.facebook.com/stormerstouch" target="_blank"><i class="fab fa-facebook-f"></i></a> 
               </li>
             <li class="nav-item">
                <a class="nav-link" href="https://www.instagram.com/stormerstouch/" target="_blank"><i class="fab fa-instagram"></i> </a>
-            </li>
+            </li> -->
           </ul>
           
         </div>
@@ -103,11 +103,10 @@
         <div class="row">
           <div class="col-md-6">
             <p class="">
-              The simplest way to create a useful and informative website for your touch rugby club.
+              The simplest way to create a touch rugby club website.
             </p>
           </div>
-          <div class="col-md-6">
-            
+          <div class="col-md-6">            
           </div>
         </div>
       </div>
