Updated styles and images Added stafford links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="jumbotron-fluid hero">
     <nav class="navbar navbar-expand-sm navbar-light ">
       <div class="container">
-        <h2><i class="fas fa-sitemap"></i> Touch Rugby Network</h2>
+        <h2><i class="fas fa-sitemap"></i> Touch Rugby Club Network</h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -93,11 +93,11 @@
     </nav>
   
     <!-- you can also add something like style="min-height: 70vh;" to the div above -->
-    <div class="container-fluid team-primary" >  
+    <div class="container-fluid team-primary vh-100" >  
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <h1 class="">Touch Rugby Network</h1>
+          <div class="col-md-4">
+            <h1 class="">Touch Rugby Club Network</h1>
           </div>
         </div>
         <div class="row">
@@ -252,7 +252,7 @@
 
   <div class="jumbotron-fluid prices" >
     <a id="prices"/>
-    <div class="container-fluid team-tertiary">
+    <div class="container-fluid team-tertiary vh-100">
       <div class="container">
         <div class="row justify-content-md-center text-center">
           <div class="col-md-12">
@@ -263,8 +263,9 @@
         <div class="row justify-content-md-center text-center">       
           <div class="col-md-4">
             <div class="card border-secondary mb-3" >
+              <div class="card-header ">
+                <h3 class="card-title">Do it yourself</h3></div>
               <div class="card-body text-secondary">
-                <h3 class="card-title">Do it yourself</h3>
                 <h4 class="card-title">Free setup / free hosting</h4>
                 <p class="card-text">
                   Follow our online instructions on how to use our template, adjust the content and colours, and how to host your website.  
@@ -277,14 +278,14 @@
           </div>     
           <div class="col-md-4">
             <div class="card border-secondary mb-3" >
+              <div class="card-header "><h3>Supported setup</h3></div>
               <div class="card-body text-secondary">
-                <h3 class="card-title"><strong>Supported setup</strong></h3>
                 <h4 class="card-title">£40 setup / free hosting</h4>
                 <p class="card-text">
-                  We can get you started for a small <strong>one-off</strong> fee.
+                  We will get you up and running for a small <strong>one-off</strong> fee.
                 </p>
                 <p class="card-text">
-                  We will need your team logo and the details of the content that you want to use. 
+                  All we need is your team logo and the details of the content that you want to use. 
                 </p>
                 <p class="card-text">We'll have your new website up and running within a few days.
                 </p>
@@ -293,8 +294,9 @@
           </div>    
           <div class="col-md-4">
             <div class="card border-secondary mb-3" >
+              <div class="card-header ">
+                <h3 class="card-title">Content changes *</h3></div>
               <div class="card-body text-secondary">
-                <h3 class="card-title">Content changes *</h3>
                 <h4 class="card-title">from £5</h4>
                 <p class="card-text">
                   We can make content changes for you for a small fee
@@ -344,20 +346,22 @@
               <div class="card-body text-secondary">
                 <h3 class="card-title">Staffordshire Stormers</h3>
                 <p class="card-text">
-                  <img src="images/teams/staffordshire-stormers.png" class="img-fluid">
+                  <img src="images/teams/staffordshire-stormers.png" class="team-logo" >
                 </p>
               </div></a>
             </div> 
           </div>          
-          <!-- <div class="col-md-4 ">
+          <div class="col-md-4 ">
             <div class="card border-secondary mb-3" >
+              <a href="https://stafford.touchrugby.club/">
               <div class="card-body text-secondary">
                 <h3 class="card-title">Stafford Bull Terriers</h3>
                 <p class="card-text">
+                  <img src="images/teams/stafford-bullterriers.png" class="team-logo">
                 </p>
-              </div>
+              </div></a>
             </div> 
-          </div>           -->
+          </div>          
           <!-- <div class="col-md-4 ">
             <div class="card border-secondary mb-3" >
               <div class="card-body text-secondary">
