--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact-us</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
             
             <!-- <li class="nav-item">
@@ -120,7 +120,7 @@
   
   <div class="jumbotron-fluid mission">
     <a id="mission"/>
-    <div class="container-fluid team-secondary">
+    <div class="container-fluid team-secondary vh-100">
       <div class="container text-center">
         <div class="row">
           <div class="col-md-12">
@@ -130,7 +130,7 @@
         <div class="row justify-content-md-center mt-5">
           <div class="col-md-8">
             <p class="">
-              It is our mission is to provide the guidance and tools for touch rugby clubs to create a website for the purposes of player recruitment and retention.
+              It is our mission is to provide the guidance and tools for touch rugby clubs to create a website for the purposes of player recruitment and retention.<a></a>
             </p>          
           </div>
         </div>
@@ -140,7 +140,7 @@
 
   <div class="jumbotron-fluid advice">
     <a id="advice"/>
-    <div class="container-fluid team-tertiary">
+    <div class="container-fluid team-tertiary vh-100">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
