--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
     <nav class="navbar navbar-expand-sm navbar-light ">
       <div class="container">
         <h2><i class="fas fa-sitemap"></i> Touch Rugby Club Network</h2>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse d-flex   d-none d-sm-block" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           </ul>
@@ -140,7 +137,7 @@
 
   <div class="jumbotron-fluid advice">
     <a id="advice"/>
-    <div class="container-fluid team-tertiary vh-100">
+    <div class="container-fluid team-tertiary ">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
@@ -260,7 +257,7 @@
 
   <div class="jumbotron-fluid prices" >
     <a id="prices"/>
-    <div class="container-fluid team-tertiary vh-100">
+    <div class="container-fluid team-tertiary ">
       <div class="container">
         <div class="row justify-content-md-center text-center">
           <div class="col-md-12">
