Added getting started docs

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <div class="col-md-8">
               <h3 class="pt-5">How much will this cost?</h3>
               <p>
-                You can get started for free! 
+                You can <a href="/getting-started.html">get started</a> for free! 
               </p>
               <p>
                 We know that all touch rugby clubs are run by volunteers with very low budgets so the <i class="fas fa-sitemap"></i> Touch Rugby Club Network helps you to get started for free. 
@@ -241,7 +241,7 @@
               
               <h3 class="pt-5">Can I edit my own content?</h3>
               <p>
-                Yes you can, but you'll need someone that knows HTML, CSS and GIT. 
+                Yes you can, but you'll need someone that knows HTML, CSS and GIT. Our <a href="/getting-started.html">getting started</a> section has all the information that you need.
               </p>
               <p>
                 Most local sports team websites don't require regular updates, so to keep costs low we use simple static website hosting on free servers. 
