Updated to GA4 google tag manager

--- a/index.html
+++ b/index.html
@@ -33,17 +33,15 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <script type="text/javascript">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-96ED8B2HTB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-10060584-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function () {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
+    gtag('config', 'G-96ED8B2HTB');
+  </script>
 
   </script>
   <script src="https://kit.fontawesome.com/e1ea18a679.js" crossorigin="anonymous"></script>
